test/expected/explain_o_new_i_pv.out
explain void* operator new(int n)
                           ^
28: error: invalid operator "new" parameter type "int"; must be "std::size_t" (or equivalent)
